<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/loginThumbnailIV"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/login_thumbnail"
                android:src="@drawable/login_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginThumbnailIV" />

            <com.rivaldy.id.commons.widget.input.RequiredInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_48"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_input_layout"
                android:hint="@string/name"
                android:paddingHorizontal="@dimen/space_16"
                android:text="@string/dummy_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appNameTV" />

            <com.rivaldy.id.commons.widget.input.EmailInputEditText
                android:id="@+id/emailET"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_48"
                android:layout_marginTop="@dimen/space_16"
                android:background="@drawable/bg_input_layout"
                android:hint="@string/email"
                android:paddingHorizontal="@dimen/space_16"
                android:text="@string/dummy_email"
                app:layout_constraintEnd_toEndOf="@+id/nameET"
                app:layout_constraintStart_toStartOf="@+id/nameET"
                app:layout_constraintTop_toBottomOf="@+id/nameET" />

            <com.rivaldy.id.commons.widget.input.PasswordInputEditText
                android:id="@+id/passwordET"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_48"
                android:layout_marginTop="@dimen/space_16"
                android:background="@drawable/bg_input_layout"
                android:hint="@string/password"
                android:paddingHorizontal="@dimen/space_16"
                android:text="@string/dummy_password"
                app:layout_constraintEnd_toEndOf="@+id/nameET"
                app:layout_constraintStart_toStartOf="@+id/nameET"
                app:layout_constraintTop_toBottomOf="@+id/emailET" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerMB"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_55"
                android:layout_marginTop="24dp"
                android:enabled="false"
                android:text="@string/register"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/nameET"
                app:layout_constraintStart_toStartOf="@+id/nameET"
                app:layout_constraintTop_toBottomOf="@+id/passwordET" />

            <TextView
                android:id="@+id/hintFooterTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/already_have_account"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerMB"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>