<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/takePictureIV"
        android:layout_width="@dimen/space_60"
        android:layout_height="@dimen/space_60"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_circle_white_outline"
        android:contentDescription="@string/take_picture"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/takeFromGalleryIV"
        android:layout_width="@dimen/space_45"
        android:layout_height="@dimen/space_45"
        android:background="@drawable/bg_circle_brown"
        android:contentDescription="@string/take_picture_from_gallery"
        android:padding="@dimen/space_10"
        android:src="@drawable/ic_baseline_photo_library_24"
        app:layout_constraintBottom_toBottomOf="@+id/takePictureIV"
        app:layout_constraintEnd_toStartOf="@+id/takePictureIV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/takePictureIV" />

    <ImageView
        android:id="@+id/switchCameraIV"
        android:layout_width="@dimen/space_45"
        android:layout_height="@dimen/space_45"
        android:background="@drawable/bg_circle_brown"
        android:contentDescription="@string/switch_camera"
        android:padding="@dimen/space_10"
        android:src="@drawable/ic_baseline_flip_camera_android_24"
        app:layout_constraintBottom_toBottomOf="@+id/takePictureIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/takePictureIV"
        app:layout_constraintTop_toTopOf="@+id/takePictureIV" />
</androidx.constraintlayout.widget.ConstraintLayout>